# nametag-printer

./: .flake8  .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  supervisord.conf
ansible/: ansible.cfg  playbook.yml  requirements.yml
ansible/inventories/: hosts
app/: Dockerfile  main.py  printer.py  qr.py  requirements.txt  rfid.py
app/templates/: index.html  printing.html
src/: webserver.py
src/nametags/: WaApi.py  cli.py  keepalive.py  logconf.py  printer.py  rfid.py  webserver.py
src/nametags/templates/: base.html  index.html  printing.html
src/templates/: index.html
tests/: test_rfid.py
