[project]
name = "nametags"
version = "0.0.0"
description = "Nametag printer for Pumping Station: One"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brother-ql-next>=0.11.3",
    "flask>=3.1.2",
    "keyboard>=0.13.5",
    "pillow>=12.0.0",
    "uvicorn>=0.38.0",
    "wand>=0.6.13",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "vermin>=1.7.0",
]

[tool.mypy]
ignore_missing_imports = true
